--- a/assets/styles/puzzleGame.scss
+++ b/assets/styles/puzzleGame.scss
@@ -1,3 +1,8 @@
 body {
   background-color: #222222;
 }
+
+.puzzle{
+  width:240px;
+  background-color: #AAAAAA;
+}
